fixed assigning roles, added dropdowns

--- a/Nov4thYr Project/Nov4thYr Project.csproj
+++ b/Nov4thYr Project/Nov4thYr Project.csproj
@@ -635,6 +635,7 @@
     <None Include="Properties\PublishProfiles\4thYearProject - Web Deploy6.pubxml" />
     <None Include="Properties\PublishProfiles\4thYearProject - Web Deploy7.pubxml" />
     <None Include="Properties\PublishProfiles\4thYearProject - Web Deploy8.pubxml" />
+    <None Include="Properties\PublishProfiles\4thYearProject - Web Deploy9.pubxml" />
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
       <LastGenOutput>Settings.Designer.cs</LastGenOutput>
