--- a/Nov4thYr Project/Nov4thYr Project.csproj
+++ b/Nov4thYr Project/Nov4thYr Project.csproj
@@ -629,6 +629,7 @@
     <None Include="Properties\PublishProfiles\4thYearProject - Web Deploy.pubxml" />
     <None Include="Properties\PublishProfiles\4thYearProject - Web Deploy1.pubxml" />
     <None Include="Properties\PublishProfiles\4thYearProject - Web Deploy10.pubxml" />
+    <None Include="Properties\PublishProfiles\4thYearProject - Web Deploy11.pubxml" />
     <None Include="Properties\PublishProfiles\4thYearProject - Web Deploy2.pubxml" />
     <None Include="Properties\PublishProfiles\4thYearProject - Web Deploy3.pubxml" />
     <None Include="Properties\PublishProfiles\4thYearProject - Web Deploy4.pubxml" />
