Organized layout, added Display Doctors Appointments page

--- a/Nov4thYr Project/Nov4thYr Project.csproj
+++ b/Nov4thYr Project/Nov4thYr Project.csproj
@@ -759,6 +759,7 @@
     <Content Include="UserRoles2.edmx.diagram">
       <DependentUpon>UserRoles2.edmx</DependentUpon>
     </Content>
+    <Content Include="Views\Patients\DoctorsAppointments.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
